Add event project

--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
                 </section>
             </div>
             <section class="card">
-                <img src="./assets/images/foodle.png" alt="placeholder img" />
+                <img src="./assets/images/foodle.png" alt="foodle img" />
                 <a href="https://rashida53.github.io/project-one/" class="foodle-txt">Javascript</a>
+            </section>
+            <section class="card">
+                <img src="./assets/images/everrands.png" alt="everrands img" />
+                <a href="https://arcane-hollows-20210.herokuapp.com/" class="everrands-txt">MVC</a>
             </section>
             <section class="card">
                 <img src="./assets/images/placeholder-img.png" alt="placeholder img" />
